# aegis

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  getting-started.md  index.md
docs/components/: gate.md  proxy.md  scanner.md  worker.md
docs/integration/: api.md  docker-compose.md
docs/reference/: configuration.md
docs/security/: policy.md  scan-rules.md
proxy/: Dockerfile  aegis_addon.py  content_inspector.py  requirements.txt  rules_loader.py  scanner_client.py  utils.py
rules/: c2_blocklist.txt  domain_whitelist.txt  rules.yml
scanner/: Dockerfile  clamd.conf  config.py  entrypoint.sh  main.py  models.py  requirements.txt
scanner/scanners/: __init__.py  clamav.py  trivy.py
scripts/: smoke-test.sh  test-e2e.sh
seccomp/: worker.json
src/aegis/: cli.py  config.py  executor.py  mcp_server.py
tests/: conftest.py  test_cli.py  test_js_patterns.py  test_mcp_server.py  test_request_hook.py  test_response_hook.py  test_rules_loader.py  test_scanner_client.py  test_scanner_models.py  test_scanner_pipeline.py
worker/: Dockerfile  entrypoint.sh
